# ChangeLog for app-misc/freemind
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/freemind/ChangeLog,v 1.44 2008/12/22 19:18:00 caster Exp $

*freemind-0.9.0_rc1 (22 Dec 2008)

  22 Dec 2008; Vlastimil Babka <caster@gentoo.org>
  +files/freemind-0.9.0_rc1-build.xml.patch, +freemind-0.9.0_rc1.ebuild:
  Version bump, we can be fast too.

*freemind-0.9.0_beta20 (20 Dec 2008)

  20 Dec 2008; Vlastimil Babka <caster@gentoo.org> metadata.xml,
  +freemind-0.9.0_beta20.ebuild:
  Version bump, bug #221749. Add local useflags for most of the optional
  plugins, see metadata.xml for details.

  05 Oct 2008; Petteri Räty <betelgeuse@gentoo.org>
  freemind-0.8.0-r3.ebuild:
  Builds with jdk-1.6 so fix DEPEND. Fixes bug #239502.

  28 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  -freemind-0.9.0_beta9.ebuild, -freemind-0.9.0_beta15.ebuild:
  Remove old versions.

*freemind-0.9.0_beta16 (09 Mar 2008)

  09 Mar 2008; Petteri Räty <betelgeuse@gentoo.org>
  +freemind-0.9.0_beta16.ebuild:
  Version bump.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> freemind-0.8.0-r3.ebuild,
  freemind-0.9.0_beta9.ebuild, freemind-0.9.0_beta15.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  14 Feb 2008; Luca Barbato <lu_zero@gentoo.org>
  freemind-0.9.0_beta15.ebuild:
  Marked ~ppc

  11 Dec 2007; Vlastimil Babka <caster@gentoo.org>
  freemind-0.9.0_beta15.ebuild:
  Add ~x86 keyword.

*freemind-0.9.0_beta15 (10 Dec 2007)

  10 Dec 2007; Vlastimil Babka <caster@gentoo.org>
  +files/freemind-0.9.0_beta15-build.xml.patch,
  +freemind-0.9.0_beta15.ebuild:
  Version bump, bug #200853. Dropped keywords for new dependency dev-java/hoteqn.

  06 Jun 2007; Vlastimil Babka <caster@gentoo.org>
  -freemind-0.7.1-r1.ebuild:
  Remove old version.

  26 May 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  freemind-0.9.0_beta9.ebuild:
  Add ~ppc.
