@@ -6,9 +6,11 @@ DIST freemind-src-0.9.0_Beta_16_icon_butterfly.tar.gz 12644069 RMD160 4a7733d278
 DIST freemind-src-0.9.0_Beta_20.tar.gz 14043048 RMD160 71ea8c251207fdb0d94f9951b6e1750515e089d2 SHA1 c25f78956f75b5a21ec4fa9da88f9a4a7cc2193f SHA256 fb6a7f4e6e224666ca921d6dbda139373c6981d0f72d25696ef7a707ec3845c9
 DIST freemind-src-0.9.0_RC_1.tar.gz 14342001 RMD160 7836b795fca5d8cf9057fa8a8b86e2de62e89714 SHA1 2044d31b1bfcc81af5f75bbacd4923747d119fd7 SHA256 29b5b548bd76857d043a5ff294d1dd90b1ce481162bcf3bcfca08aab270c56b1
 DIST freemind-src-0_8_0.zip 9857214 RMD160 df7f47aedef7b761c94f938f7c851f0b8ed32e04 SHA1 17c65bdc65b292d7d62fe7a8d633a24c2ad618df SHA256 c28902151f0089ddd1270c662820b6e33a85a686083c53dcfe6dd7205493da78
+DIST freemind-src-0_8_1.zip 9856023 RMD160 618bad32fdd64bcb0f30adeb02d2dfe7b73dcc66 SHA1 27b09fdbd4b39219ab16d4b9574b972dbafe54e1 SHA256 5cbd8e43d886d5b19f59d380cec3b1902864812cc9a326a8dbb9a97bcc252e5c
 EBUILD freemind-0.8.0-r3.ebuild 1283 RMD160 11986ad9bc8d8a2567f13bfcaee10efcd2b1f938 SHA1 37942f230701e445b855e49d680a316d5e171d9a SHA256 cb794f1bad8af6eaec891321547ddb12e307cb212927281d74ac26d4ccfb3e54
+EBUILD freemind-0.8.1.ebuild 1053 RMD160 87d99d3c6e401a74e44dc407ae4e65b6c025675f SHA1 12d20b0716c91c7c4c95f56c929a84d14306de85 SHA256 b638c1ee44e15a4851fff3c8489aa8f8d630d38f0c5cc37ded7e5c41d55e9029
 EBUILD freemind-0.9.0_beta16.ebuild 2178 RMD160 a32ae6ebeb5ae13160984b0bd85b121cf519f4ee SHA1 53e19d7974cc896eb36c423d3efbee12a84edf3e SHA256 47c846adcdf7b6072e8f26b4fe627ed960e827c081b1c5364dc5844f5f9dd8f4
 EBUILD freemind-0.9.0_beta20.ebuild 2586 RMD160 742f3b42782af8a4c5fa6942a3a0011eb26d26c4 SHA1 eb0f302eb9f5260051441f4d2750a109492d59ad SHA256 e9b2b0019175975961c32f16555c7faa72069dc6cdc473606ea399992c696a6a
 EBUILD freemind-0.9.0_rc1.ebuild 2593 RMD160 74afac51f6062a4315a2bdfa16dd22e5b7369c67 SHA1 b82479dd5317ea4d0bdb985675aaba6bef6b0d5e SHA256 d962cd192e57d9359248102d1c4b8697b62a2bcd7504483bc7744ea1ab70b03e
-MISC ChangeLog 6722 RMD160 4a58550291971bb1589e1b7c01c313a3e98ec1aa SHA1 8c464d2bc2a690a6070f026adeef7a273df9817a SHA256 ca0d7cb25d8d34312c54df5f5a9433331d683a7e633809f76b713687ab4a777e
+MISC ChangeLog 6771 RMD160 80100fbd5c2b3ddd119fa46262ed2549281c241c SHA1 1267116feb06907f25cd41e8e30e9979d627731a SHA256 eebf28f08a175d688121617ea9fdb790af5f63b1bd40a08ca5b2ce433d901e9f
 MISC metadata.xml 498 RMD160 3257462313db1947676502aee3f039f8885289b9 SHA1 0dfcc245809419a94c5399ecdccaec3429895ab6 SHA256 0fbff5fdf47275d3a532869de6e5064f613cf929bdbab2ed74ef9ff5fe1949a9
