@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/freemind
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/freemind/ChangeLog,v 1.44 2008/12/22 19:18:00 caster Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: 
+
+*freemind-0.8.1 (17 Jan 2009)
+
+  17 Jan 2009; Robert A <r_a@lavabit.com>
+  +freemind-0.8.1.ebuild:
+  Version bump (current stable version)
 
 *freemind-0.9.0_rc1 (22 Dec 2008)
 
